3/12/2023: Karl
- AssignGlobalModerator, AssignAdmin structs and pipeline 
- Changing a logged-in user's controller will swap it at runtime and push a login response to the user's nextmessages so their front end can quickly realize the changes. 

3/8/2023 : Karl 
- SCHEMA CHANGE: GlobalModeratorAssignments is_deactivation now NOT NULL. Re migrate your DBs!
- umanager.go : domain and global moderator controllers initialized and assigned when appropriate 
- added methods to domain and global moderator controllers where polymorphically necessary 
- Queries.GetDomainModeratorAssignments, Queries.GetGlobalModeratorAssignments (sqlc generated)
- Store.GetDomainModeratorAssignments, Store.IsGlobalModerator
- user profile in login response now populated correct based on SQL table for IsDomainModerator, IsGlobalModerator, and DomainsModerating. Data can be used as appropriate to realize UI on the front end. 

3/1/2023 : Karl 
- newFeedback implemented

2/26/2023 : Karl
- Server now produces error if it fails to connect to server 
- Getting admin user level redone in a more reliable way

2/24/2023 : Karl 
- ViewUsersReport pipeline
- ToggleFeedbackHidden pipeline 
- ViewFeedbackSection pipeline 
- Assign AdminControllers to admins 
- Store.IsAdmin 
- Controller.GetControllerType() 
- user list in cli and usermanager


2/19/2023: Karl
- Implemented CommentVote 
- Changed communication.CommentVote.Value to type int16 and the type in the table to match. Also made table value non-null. 
- GetVotesForCommentAndCategoryByUser, CreateCommentVote, DeleteCommentVote, UpdateCommentVote queries
- controller.HandleCommandVoteComment, server.voteComment for the API path


2/18/2023: All group members
- Fixed null-comment bugs ( making the slice was starting with empty structs, capacity was being passed in as length)
- Fixed no comments being pulled from database (comment.sql error) ; was querying based on comment id not path id 
- Make all domains and paths lowercase for consistency
