@@ -1,0 +1,7 @@
+DELETE FROM "VoteRecords";
+DELETE FROM "Comments";
+DELETE FROM "Paths";
+DELETE FROM "Domains";
+DELETE FROM "AdminAssignments";
+DELETE FROM "GlobalModeratorAssignments";
+DELETE FROM "Users";
